WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284567
Fix typo `overflowX` in `StyleAdjuster.cpp` twice since
266560@main
https://bugs.webkit.org/show_bug.cgi?id=284567
Summary
Fix typo `overflowX` in `StyleAdjuster.cpp` twice since 266560@main
Ahmad Saleem
Reported
2024-12-12 11:04:24 PST
ssia - it is typo, we should fix it.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-12 11:06:54 PST
<
rdar://problem/141371248
>
Ahmad Saleem
Comment 2
2024-12-12 11:08:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37844
EWS
Comment 3
2024-12-12 14:33:03 PST
Committed
287765@main
(d17431599515): <
https://commits.webkit.org/287765@main
> Reviewed commits have been landed. Closing PR #37844 and removing active labels.
Ahmad Saleem
Comment 4
2024-12-12 15:04:56 PST
***
Bug 262367
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug