Fix typo of being twice mentioned `overflowX` in `StyleAdjuster.cpp` since 266560@main https://bugs.webkit.org/show_bug.cgi?id=284567 rdar://problem/141371248

Reviewed by Alan Baradlay.

While looking through StyleAdjuster code, I noticed that I did this typo,
which was obviously meant to be `overflowY` and `overflowX` but I did it
as twice `overflowX` since 266560@main.

This patch is to make it right what should have been done in first place.

* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjust const):

Canonical link: https://commits.webkit.org/287765@main